Created "Demo", isn't really a demo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,41 @@
 		<div id="main">
 			<h1>Cipher</h1>
 			<p>A JavaScript plugin that makes it easier to cipher and decipher your strings.</p>
+			<hr>
 			<h2>Usage</h2>
 			<p>All functions are accessible via the Cipher object.</p>
-			<p>General Usage:</p>
-			<pre><code>Cipher.[to/from](type, string [, key]);</code></pre>
+			<p>General Usage: <code>Cipher.[to/from](type, string [, key]);</code></p>
 			<p>Note that the key is only needed for the Caesar cipher.</p>
-			<p>To cipher something using the Atbash cipher, use the following snippet:</p>
-			<pre><code>Cipher.to('atbash', 'This will be put through the Atbash cipher.');</code></pre>
+			<p>To cipher something using the Atbash cipher, use the following snippet: <code>Cipher.to('atbash', 'foo bar');</code>.</p>
 			<h2>License</h2>
-			<p>Cipher is under the MIT License.</p>
+			<p><pre><code>
+The MIT License (MIT)
+
+Copyright (c) 2016 Ryan Nguyen
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+			</code></pre></p>
+		</div>
+		<div id="footer">
+			<b><a href="https://github.com/Loquacious/cipher">Cipher</a> is maintained by <a href="https://github.com/Loquacious/">Ryan Nguyen</a>.</b>
+			<br>
+			This page was created using a custom theme by <a href="https://github.com/Loquacious/">Ryan Nguyen</a>.
 		</div>
 	</body>
 </html>
