Added normalize.css, made it look pretty good
On hover, links get a gray background and become white.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Demo</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="application/javascript" src="cipher.js"></script>
+		<meta charset="utf-8">
+		<title>Cipher</title>
+		<link rel="stylesheet" type="text/css" href="build/stylesheets/normalize/normalize.css">
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+		<script type="application/javascript" src="build/scripts/cipher/cipher.js"></script>
 	</head>
 	<body>
 		<div id="main">
