It looks pretty

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Cipher</title>
+		<title>Cipher by Ryan Nguyen</title>
 		<link rel="stylesheet" type="text/css" href="build/stylesheets/normalize/normalize.css">
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
 		<script type="application/javascript" src="build/scripts/cipher/cipher.js"></script>
 	</head>
 	<body>
+		<div id="links">
+			<a href="https://github.com/Loquacious/cipher">View on GitHub</a>
+			<br>
+			<a href="build/scripts/cipher/cipher.js" download>Download Plugin</a>
+		</div>
 		<div id="main">
 			<h1>Cipher</h1>
 			<p>A JavaScript plugin that makes it easier to cipher and decipher your strings.</p>
